feat: add more exercises